# false-vrf

./: .gitignore  README.md  contract_abi.json  lottery.py  pyproject.toml
contracts/: SimpleLottery.sol
